--- a/pom.xml
+++ b/pom.xml
@@ -71,11 +71,22 @@
 			<version>2.3.1</version>
 		</dependency>
 
-
 		<dependency>
 			<groupId>commons-codec</groupId>
 			<artifactId>commons-codec</artifactId>
 			<version>1.15</version>
 		</dependency>
+		
+		
+		
+		<dependency>
+		    <groupId>org.junit.jupiter</groupId>
+		    <artifactId>junit-jupiter-api</artifactId>
+		    <version>5.7.0</version>
+		    <scope>test</scope>
+		</dependency>
+		
+		
+		
 	</dependencies>
 </project>
